# dungeoncrawl-tui

./: DECISIONS.md  DOGFOOD.md  Makefile  README.md  pyproject.toml  wiz.py
dungeoncrawl_tui/: __init__.py  app.py  maps.py  screens.py  tiles.py  tui.tcss
screenshots/: README.md  gameplay.tcell  hero.tcell
tests/: perf.py  playtest.py  qa.py
wizardry_tui/: __init__.py  app.py  data.py  render3d.py  screens.py  sim.py  tui.tcss
