[project]
name = "wizardry-tui"
version = "0.1.0"
description = "Terminal-native grid-based first-person dungeon crawler, clean-room from public design docs"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80,<10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wizardry_tui"]

[tool.setuptools.package-data]
wizardry_tui = ["tui.tcss"]
